# SmartTV-Secure-Pipeline

./: BUILD_INSTRUCTIONS.md  CI_CD_GUIDE.md  DEVELOPER_GUIDE.md  README.md
smarttv-secure-pipeline/: CMakeLists.txt  README.md
smarttv-secure-pipeline/.github/workflows/: build.yml
smarttv-secure-pipeline/kernel/: Kconfig  Makefile
smarttv-secure-pipeline/kernel/rdma_stub/: Kconfig  Makefile  rdma_stub.c  rdma_stub_uapi.h
smarttv-secure-pipeline/kernel/secure_video/: Kconfig  Makefile  svp_dmabuf_dmaheap.c  svp_drv.c  svp_uapi.h
smarttv-secure-pipeline/tee/host/: CMakeLists.txt  tee_svp_client.c  tee_svp_client.h
smarttv-secure-pipeline/tee/ta/: ta_svp.c  ta_svp_uuid.h  user_ta_header_defines.h
smarttv-secure-pipeline/user/: CMakeLists.txt
smarttv-secure-pipeline/user/apps/: demo_player.cpp
smarttv-secure-pipeline/user/common/: fd.h  log.h
smarttv-secure-pipeline/user/drm/: cdm_adapter.h  cdm_adapter_stub.cpp
smarttv-secure-pipeline/user/nrdp/: nrdp_adapter.h  nrdp_adapter_stub.cpp
smarttv-secure-pipeline/user/player/: pipeline.cpp  pipeline.h  rdma_client.cpp  rdma_client.h
smarttv-secure-pipeline/user/renderer/: gbm_kms_renderer.cpp  gbm_kms_renderer.h
